# lisp-alike

./: .gitignore  README.md  lisp.py  lisp.rs  meson.build
examples/: circle_area.lisp  circle_area2.lisp  cos1.lisp  cos2.lisp  fib1.lisp  fib2.lisp  fib3.lisp  manyoper.lisp  multicos.lisp  multidef.lisp  plusmultest.lisp  plusmultest2.lisp
include/: builtin.hh  env.hh  errors.hh  eval.hh  history.hh  parse.hh  symbols.hh  tokenize.hh  value.hh
src/: builtin.cpp  env.cpp  eval.cpp  history.cpp  main.cpp  meson.build  parse.cpp  symbols.cpp  tokenize.cpp  value.cpp
test/: cases.sh  meson.build  test_builtin.cpp  test_env.cpp  test_eval.cpp  test_parse.cpp  test_symbols.cpp  test_tokenize.cpp  test_value.cpp  update_catch.sh
test/cases/: case1.lisp  case3.lisp  case3.lisp.out
